<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="err_uri">当前版本不支持此项服务，请更新到最新版本</string>
    <string name="tip_network_error">网络异常，请稍后重试!</string>
    <string name="tip_image_load_error">网络开小差了，稍后再试试吧～</string>

    <string name="okpermission_app_name">library</string>
    <string name="okpermission_button_next">下一步</string>
    <string name="okpermission_btn_refuse">拒绝</string>
    <string name="okpermission_btn_settings">去设置</string>
    <string name="okpermission_dialog_error_title">请允许获取 %s 权限</string>
    <string name="okpermission_dialog_error_msg">由于防疫系统无法获取 %s 权限，不能正常运行，请开启权限后在使用防疫系统。</string>
    <string name="okpermission_dialog_error_msg_sub">设置路径->平安健康->权限</string>
    <string name="okpermission_app_settings_error">请打开手机设置->应用程序->防疫系统->权限</string>
    <string name="okpermission_app_install_ok_apk_error">请打开手机设置->系统安全->安装未知应用->防疫系统->允许</string>
    <string name="okpermission_install_apk">未知来源应用</string>
    <string name="okpermission_show_permission_dialog_msg">为了保证您正常使用防疫系统App的服务，需要获取您的%1$s，请允许。</string>


</resources>