<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/okpermission_margin_top_bottom"
        android:layout_marginRight="@dimen/okpermission_margin_top_bottom"
        android:layout_marginBottom="@dimen/okpermission_margin_left_right"
        android:layout_marginTop="@dimen/okpermission_margin_left_right"
        android:gravity="left"
        android:text="@string/okpermission_dialog_error_title"
        style="@style/okpermission_common_dialog_title_style"/>

    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/okpermission_margin_top_bottom"
        android:layout_marginRight="@dimen/okpermission_margin_top_bottom"
        android:layout_marginTop="@dimen/okpermission_margin_left_right"
        android:layout_marginBottom="@dimen/okpermission_margin_left_right"
        android:gravity="left"
        android:text="@string/okpermission_dialog_error_msg"
        style="@style/okpermission_common_dialog_msg_style" />

    <TextView
        android:id="@+id/msgSubTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/okpermission_margin_top_bottom"
        android:layout_marginRight="@dimen/okpermission_margin_top_bottom"
        android:gravity="left"
        android:text="@string/okpermission_dialog_error_msg_sub"
        style="@style/okpermission_common_dialog_msg_style"/>

    <LinearLayout
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/okpermission_btn_refuse"
            android:paddingLeft="@dimen/okpermission_margin_top_bottom"
            android:paddingRight="@dimen/okpermission_margin_top_bottom"
            android:paddingTop="@dimen/okpermission_margin_left_right"
            android:paddingBottom="@dimen/okpermission_margin_left_right"
            android:layout_marginRight="@dimen/okpermission_margin_left_right"
            android:textColor="@color/okpermission_primary"
            android:textSize="@dimen/okpermission_title_text_size" />

        <Button
            android:id="@+id/settinsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/okpermission_btn_settings"
            android:paddingLeft="@dimen/okpermission_margin_top_bottom"
            android:paddingRight="@dimen/okpermission_margin_top_bottom"
            android:paddingTop="@dimen/okpermission_margin_left_right"
            android:paddingBottom="@dimen/okpermission_margin_left_right"
            android:textColor="@color/okpermission_primary"
            android:textSize="@dimen/okpermission_title_text_size" />
    </LinearLayout>
</LinearLayout>